# private-captcha-py

./: Makefile  README.md  pyproject.toml  test_client.py
.github/workflows/: ci.yml  publish.yml
private_captcha/: __init__.py  client.py  exceptions.py  models.py
