[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "private-captcha"
version = "0.1.0"
description = "Python client library for Private Captcha API"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # No external dependencies - uses only Python standard library
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pylint",
    "black",
]

[project.urls]
Homepage = "https://github.com/yourusername/private-captcha-py"
Repository = "https://github.com/yourusername/private-captcha-py"

[tool.setuptools.packages.find]
include = ["private_captcha*"]
